--- a/assets/style.css
+++ b/assets/style.css
@@ -49,7 +49,7 @@ a:hover {
 
 .button {
   display: flex;
-  background: linear-gradient(65deg, #da552f, #ea8e39);
+  background: linear-gradient(65deg, #95ff2b, #8aed26);
   font-family: "Heebo", sans-serif;
   color: #fff;
   display: inline-flex;
@@ -262,7 +262,7 @@ html[dir="rtl"] .app__logo-wrapper {
 }
 .btn {
   width: 80%;
-  background: #d90647;
+  background: #95ff2b;
   padding: 0.75rem 2.5rem;
   color: #363636;
   border-radius: 3.125rem;
@@ -283,7 +283,7 @@ html[dir="rtl"] .app__logo-wrapper {
 }
 
 .btn:hover {
-  background: #d90647;
+  background: #95ff2b;
   color: #ffffff;
   transition: 0.3s;
   transform: scale(1.01);
@@ -298,7 +298,7 @@ html[dir="rtl"] .app__logo-wrapper {
 }
 
 .download-btn {
-  background: #fff;
+  background: #000000;
   background-clip: border-box;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
